Heap size = 0.75*container memory (YARN mode)